--- a/index.html
+++ b/index.html
@@ -5,141 +5,161 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UniCover — Powered by Finoptiv</title>
 
-  <!-- Google Fonts: Cinzel (display) + Lato (body) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
-  <!-- pdfmake CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+  <!-- jsPDF v2.5.1 — UMD build -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- -
-       BACKGROUND ORBS (ambient glow blobs)
-  - -->
+  <!-- Ambient background orbs -->
   <div class="orb orb--1" aria-hidden="true"></div>
   <div class="orb orb--2" aria-hidden="true"></div>
   <div class="orb orb--3" aria-hidden="true"></div>
 
-  <!-- -
-       HEADER BAR
-  - -->
+  <!-- ═══ TOPBAR ═══ -->
   <header class="topbar" role="banner">
     <div class="topbar__brand">
-      <img src="Rabindra_University_Logo.svg" alt="Rabindra University Logo" class="topbar__logo" />
+      <img src="Rabindra_University_Logo.svg" alt="Rabindra University Logo" class="topbar__logo" id="topbarLogo" />
       <div class="topbar__wordmark">
         <span class="topbar__name">UniCover</span>
         <span class="topbar__powered">Powered by Finoptiv</span>
       </div>
     </div>
 
-    <!-- Dark / Light mode toggle -->
-    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode" title="Toggle theme">
-      <span class="theme-toggle__icon theme-toggle__icon--moon">🌙</span>
-      <span class="theme-toggle__icon theme-toggle__icon--sun">☀️</span>
-      <span class="theme-toggle__track" aria-hidden="true"></span>
-    </button>
+    <div class="topbar__controls">
+      <!-- Font-load indicator (hidden by default, shows while loading Bengali font) -->
+      <span class="font-status" id="fontStatus" hidden aria-live="polite"></span>
+
+      <!-- Language toggle -->
+      <button class="btn-lang" id="langToggleBtn" aria-label="Switch language" title="Toggle Bengali / English">
+        বাংলা
+      </button>
+
+      <!-- Dark / Light toggle -->
+      <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">
+        <span class="theme-toggle__icon theme-toggle__icon--moon">🌙</span>
+        <span class="theme-toggle__icon theme-toggle__icon--sun">☀️</span>
+        <span class="theme-toggle__track" aria-hidden="true"></span>
+      </button>
+    </div>
   </header>
 
-  <!-- -
-       MAIN CONTENT
-  - -->
+  <!-- ═══ MAIN CONTENT ═══ -->
   <main class="main-content" role="main">
 
-    <!-- Page hero heading -->
-    <section class="hero" aria-label="App introduction">
-      <h1 class="hero__title">RUB Academic Cover Generator</h1>
-      <p class="hero__sub">Fill in your assignment details and export a <strong>crystal-clear PDF</strong> in seconds.</p>
+    <section class="hero" aria-label="Introduction">
+      <h1 class="hero__title" id="heroTitle">RUB Academic Cover Generator</h1>
+      <p class="hero__sub" id="heroSub">
+        Fill in your assignment details and export a <strong>crystal-clear PDF</strong> in seconds.
+      </p>
     </section>
 
-    <!-- ─── FORM CARD ─── -->
-    <form id="coverForm" class="glass-card form-card" novalidate aria-label="Cover page form">
+    <form id="coverForm" class="glass-card form-card" novalidate aria-label="Cover page details">
 
-      <!-- ─ Section: Assignment Info ─ -->
+      <!-- ─── Assignment Details ─── -->
       <fieldset class="form-section">
         <legend class="form-section__legend">
-          <span class="legend-icon"></span> Assignment Details
+          <span class="legend-icon">📋</span>
+          <span id="legendAssignment">Assignment Details</span>
         </legend>
 
         <div class="form-group">
-          <label class="form-label" for="assignmentTopic">Assignment Topic <span class="req">*</span></label>
-          <input class="form-input" type="text" id="assignmentTopic" name="assignmentTopic"
+          <label class="form-label" id="lTopic" for="assignmentTopic">
+            Assignment Topic <span class="req">*</span>
+          </label>
+          <input class="form-input" type="text" id="assignmentTopic"
                  placeholder="e.g. Impact of Inflation on GDP" required autocomplete="off" />
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <label class="form-label" for="courseTitle">Course Title <span class="req">*</span></label>
-            <input class="form-input" type="text" id="courseTitle" name="courseTitle"
+            <label class="form-label" id="lCourseT" for="courseTitle">
+              Course Title <span class="req">*</span>
+            </label>
+            <input class="form-input" type="text" id="courseTitle"
                    placeholder="e.g. Macroeconomics" required autocomplete="off" />
           </div>
           <div class="form-group">
-            <label class="form-label" for="courseCode">Course Code <span class="req">*</span></label>
-            <input class="form-input" type="text" id="courseCode" name="courseCode"
+            <label class="form-label" id="lCourseC" for="courseCode">
+              Course Code <span class="req">*</span>
+            </label>
+            <input class="form-input" type="text" id="courseCode"
                    placeholder="e.g. ECO 301" required autocomplete="off" />
           </div>
         </div>
       </fieldset>
 
-      <!-- ─ Section: Teacher Info ─ -->
+      <!-- ─── Submitted To (Teacher) ─── -->
       <fieldset class="form-section">
         <legend class="form-section__legend">
-          <span class="legend-icon">🎓</span> Submitted To (Teacher)
+          <span class="legend-icon">🎓</span>
+          <span id="legendTeacher">Submitted To (Teacher)</span>
         </legend>
 
         <div class="form-group">
-          <label class="form-label" for="teacherName">Teacher's Name <span class="req">*</span></label>
-          <input class="form-input" type="text" id="teacherName" name="teacherName"
+          <label class="form-label" id="lTName" for="teacherName">
+            Teacher's Name <span class="req">*</span>
+          </label>
+          <input class="form-input" type="text" id="teacherName"
                  placeholder="e.g. Dr. Md. Rafiqul Islam" required autocomplete="off" />
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <label class="form-label" for="teacherDesignation">Designation</label>
-            <input class="form-input" type="text" id="teacherDesignation" name="teacherDesignation"
+            <label class="form-label" id="lTDesig" for="teacherDesig">Designation</label>
+            <input class="form-input" type="text" id="teacherDesig"
                    placeholder="e.g. Associate Professor" autocomplete="off" />
           </div>
           <div class="form-group">
-            <label class="form-label" for="teacherDept">Department</label>
-            <input class="form-input" type="text" id="teacherDept" name="teacherDept"
+            <label class="form-label" id="lTDept" for="teacherDept">Department</label>
+            <input class="form-input" type="text" id="teacherDept"
                    placeholder="e.g. Economics" autocomplete="off" />
           </div>
         </div>
       </fieldset>
 
-      <!-- ─ Section: Student Info ─ -->
+      <!-- ─── Submitted By (Student) ─── -->
       <fieldset class="form-section">
         <legend class="form-section__legend">
-          <span class="legend-icon"></span> Submitted By (Student)
-          <span class="autosave-badge" id="autosaveBadge" aria-live="polite"></span>
+          <span class="legend-icon">🎒</span>
+          <span id="legendStudent">Submitted By (Student)</span>
         </legend>
 
         <div class="form-row">
           <div class="form-group">
-            <label class="form-label" for="studentName">Full Name <span class="req">*</span></label>
-            <input class="form-input" type="text" id="studentName" name="studentName"
+            <label class="form-label" id="lSName" for="studentName">
+              Full Name <span class="req">*</span>
+            </label>
+            <input class="form-input" type="text" id="studentName"
                    placeholder="e.g. Sourab Dey Soptom" required autocomplete="off" />
           </div>
           <div class="form-group">
-            <label class="form-label" for="studentId">Student ID <span class="req">*</span></label>
-            <input class="form-input" type="text" id="studentId" name="studentId"
+            <label class="form-label" id="lSId" for="studentId">
+              Student ID <span class="req">*</span>
+            </label>
+            <input class="form-input" type="text" id="studentId"
                    placeholder="e.g. 2021-1-60-001" required autocomplete="off" />
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <label class="form-label" for="studentSession">Session <span class="req">*</span></label>
-            <input class="form-input" type="text" id="studentSession" name="studentSession"
+            <label class="form-label" id="lSSession" for="studentSession">
+              Session <span class="req">*</span>
+            </label>
+            <input class="form-input" type="text" id="studentSession"
                    placeholder="e.g. 2021-22" required autocomplete="off" />
           </div>
           <div class="form-group">
-            <label class="form-label" for="studentDept">Department <span class="req">*</span></label>
-            <select class="form-input form-select" id="studentDept" name="studentDept" required>
+            <label class="form-label" id="lSDept" for="studentDept">
+              Department <span class="req">*</span>
+            </label>
+            <select class="form-input form-select" id="studentDept" required>
               <option value="" disabled selected>Select Department</option>
               <option value="Management">Management</option>
               <option value="Bangla">Bangla</option>
@@ -150,62 +170,72 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="form-label" for="submissionDate">Date of Submission</label>
-          <input class="form-input" type="date" id="submissionDate" name="submissionDate" />
-        </div>
-
-        <!-- Auto-save controls -->
-        <div class="autosave-row">
-          <label class="toggle-label">
-            <input type="checkbox" id="autoSaveToggle" checked />
-            <span class="toggle-pill"></span>
-            <span class="toggle-text">Remember my student info</span>
-          </label>
-          <button type="button" class="btn-clear" id="clearSavedBtn" title="Clear saved student data">
-            🗑 Clear Saved
-          </button>
+        <div class="form-group" style="max-width:220px">
+          <label class="form-label" id="lDate" for="submissionDate">Date of Submission</label>
+          <input class="form-input" type="date" id="submissionDate" />
         </div>
       </fieldset>
 
-      <!-- ─ Validation error banner ─ -->
+      <!-- ─── Logo Option ─── -->
+      <fieldset class="form-section logo-option-section">
+        <legend class="form-section__legend">
+          <span class="legend-icon">🖼</span>
+          <span>PDF Logo</span>
+        </legend>
+
+        <div class="logo-option-row">
+          <!-- Live preview of the logo -->
+          <div class="logo-preview-wrap" id="logoPreviewWrap">
+            <img src="Rabindra_University_Logo.svg" alt="University logo preview"
+                 class="logo-preview-img" id="logoPreviewImg" />
+            <div class="logo-preview-ring" aria-hidden="true"></div>
+          </div>
+
+          <!-- Toggle -->
+          <div class="logo-option-controls">
+            <label class="logo-toggle-label" for="logoToggle">
+              <input type="checkbox" id="logoToggle" checked />
+              <span class="toggle-pill"></span>
+              <span class="logo-toggle-text" id="logoToggleText">Include Logo in PDF</span>
+            </label>
+            <p class="logo-option-hint" id="logoOptionHint">
+              The university seal will appear centred at the top of your cover page.
+            </p>
+          </div>
+        </div>
+      </fieldset>
+
+      <!-- Error banner -->
       <div class="error-banner" id="errorBanner" role="alert" aria-live="assertive" hidden>
         <span class="error-icon">⚠️</span>
         <span id="errorMessage">Please fill all required fields.</span>
       </div>
 
-    </form><!-- /coverForm -->
-
+    </form>
   </main>
 
-  <!-- -
-       FLOATING ACTION BUTTON — Generate PDF
-  - -->
+  <!-- ═══ FAB — Generate PDF ═══ -->
   <button class="fab" id="generateBtn" aria-label="Generate PDF cover page" title="Generate PDF">
     <span class="fab__icon" aria-hidden="true">⬇</span>
-    <span class="fab__label">Generate PDF</span>
+    <span class="fab__label" id="generateBtnLabel">Generate PDF</span>
     <span class="fab__ripple" aria-hidden="true"></span>
   </button>
 
-  <!-- -
-       LOADING OVERLAY
-  - -->
+  <!-- Loading overlay -->
   <div class="loading-overlay" id="loadingOverlay" hidden aria-hidden="true">
     <div class="spinner" role="status">
       <div class="spinner__ring"></div>
-      <span class="spinner__text">Crafting your PDF…</span>
+      <span class="spinner__text" id="spinnerText">Crafting your PDF…</span>
     </div>
   </div>
 
-  <!-- -
-       FOOTER
-  - -->
+  <!-- Footer -->
   <footer class="site-footer" role="contentinfo">
-    Crafted with  by <strong>Sourab Dey Soptom</strong> &nbsp;|&nbsp; Powered by <strong>Finoptiv</strong>
+    Crafted with ♥ by <strong>Sourab Dey Soptom</strong> &nbsp;|&nbsp; Powered by <strong>Finoptiv</strong>
   </footer>
 
-  <!-- Hidden canvas used to convert SVG logo → PNG for pdfmake -->
-  <canvas id="logoCanvas" style="display:none" width="200" height="200" aria-hidden="true"></canvas>
+  <!-- Hidden canvas — converts SVG logo to PNG for jsPDF -->
+  <canvas id="logoCanvas" width="300" height="300" style="display:none" aria-hidden="true"></canvas>
 
   <script src="app.js"></script>
 </body>
